--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -158,10 +158,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:googleapiclient.http:Sleeping 0.60 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
-      "WARNING:googleapiclient.http:Sleeping 3.70 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
-      "WARNING:googleapiclient.http:Sleeping 1.84 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
-      "WARNING:googleapiclient.http:Sleeping 1.96 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
       "======================================================================\n",
       "Dataset name: Sentinel-1\n",
       "Number of images: 5\n",
@@ -257,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,15 +268,15 @@
        "                    --jp-layout-color2: #454545;\n",
        "                    background-color: #383838;\n",
        "                }\n",
-       "                    \n",
+       "\n",
        "                .geemap-dark .jupyter-button {\n",
        "                    --jp-layout-color3: #383838;\n",
        "                }\n",
-       "                \n",
+       "\n",
        "                .geemap-colab {\n",
        "                    background-color: var(--colab-primary-surface-color, white);\n",
        "                }\n",
-       "                    \n",
+       "\n",
        "                .geemap-colab .jupyter-button {\n",
        "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
        "                }\n",
@@ -316,7 +312,7 @@
        "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
        "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
        "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css&quot;/&gt;\n",
        "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
        "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
        "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
@@ -324,7 +320,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_9a7ccf446d8282d806f033bb132bd217 {\n",
+       "                #map_86dbfc44c74439aa6b62ef905b764519 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -344,14 +340,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_9a7ccf446d8282d806f033bb132bd217&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_86dbfc44c74439aa6b62ef905b764519&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_9a7ccf446d8282d806f033bb132bd217 = L.map(\n",
-       "                &quot;map_9a7ccf446d8282d806f033bb132bd217&quot;,\n",
+       "            var map_86dbfc44c74439aa6b62ef905b764519 = L.map(\n",
+       "                &quot;map_86dbfc44c74439aa6b62ef905b764519&quot;,\n",
        "                {\n",
        "                    center: [27.856693999999997, 67.92256],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -375,17 +371,18 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_925092e70dbeda245d230807f1e0ebf7 = L.tileLayer(\n",
-       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 30, &quot;maxZoom&quot;: 30, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            var tile_layer_30fb13d0c779a7f2e131f34940ae48ad = L.tileLayer(\n",
+       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 30, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "                tile_layer_925092e70dbeda245d230807f1e0ebf7.addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
+       "            tile_layer_30fb13d0c779a7f2e131f34940ae48ad.addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
+       "        \n",
        "    \n",
        "            L.control.fullscreen(\n",
        "                {&quot;forceSeparateButton&quot;: false, &quot;position&quot;: &quot;topleft&quot;, &quot;title&quot;: &quot;Full Screen&quot;, &quot;titleCancel&quot;: &quot;Exit Full Screen&quot;}\n",
-       "            ).addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
+       "            ).addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "        \n",
        "    \n",
        "            var options = {\n",
@@ -394,14 +391,14 @@
        "              edit: {},\n",
        "            }\n",
        "            // FeatureGroup is to store editable layers.\n",
-       "            var drawnItems_draw_control_dee073d449443dca9f0116bf96949611 = new L.featureGroup().addTo(\n",
-       "                map_9a7ccf446d8282d806f033bb132bd217\n",
+       "            var drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2 = new L.featureGroup().addTo(\n",
+       "                map_86dbfc44c74439aa6b62ef905b764519\n",
        "            );\n",
-       "            options.edit.featureGroup = drawnItems_draw_control_dee073d449443dca9f0116bf96949611;\n",
-       "            var draw_control_dee073d449443dca9f0116bf96949611 = new L.Control.Draw(\n",
+       "            options.edit.featureGroup = drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2;\n",
+       "            var draw_control_d5ced5527b0ba0d76829e6e6ccd650d2 = new L.Control.Draw(\n",
        "                options\n",
-       "            ).addTo( map_9a7ccf446d8282d806f033bb132bd217 );\n",
-       "            map_9a7ccf446d8282d806f033bb132bd217.on(L.Draw.Event.CREATED, function(e) {\n",
+       "            ).addTo( map_86dbfc44c74439aa6b62ef905b764519 );\n",
+       "            map_86dbfc44c74439aa6b62ef905b764519.on(L.Draw.Event.CREATED, function(e) {\n",
        "                var layer = e.layer,\n",
        "                    type = e.layerType;\n",
        "                var coords = JSON.stringify(layer.toGeoJSON());\n",
@@ -409,92 +406,88 @@
        "                    alert(coords);\n",
        "                    console.log(coords);\n",
        "                });\n",
-       "                drawnItems_draw_control_dee073d449443dca9f0116bf96949611.addLayer(layer);\n",
+       "                drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2.addLayer(layer);\n",
        "             });\n",
-       "            map_9a7ccf446d8282d806f033bb132bd217.on(&#x27;draw:created&#x27;, function(e) {\n",
-       "                drawnItems_draw_control_dee073d449443dca9f0116bf96949611.addLayer(e.layer);\n",
+       "            map_86dbfc44c74439aa6b62ef905b764519.on(&#x27;draw:created&#x27;, function(e) {\n",
+       "                drawnItems_draw_control_d5ced5527b0ba0d76829e6e6ccd650d2.addLayer(e.layer);\n",
        "            });\n",
        "            \n",
        "        \n",
        "    \n",
+       "\n",
+       "            var geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 = {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;, &quot;provider&quot;: &quot;nominatim&quot;, &quot;providerOptions&quot;: {}, &quot;zoom&quot;: 11};\n",
+       "\n",
+       "            // note: geocoder name should start with lowercase\n",
+       "            var geocoderName_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 = geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&quot;provider&quot;];\n",
+       "\n",
+       "            var customGeocoder_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 = L.Control.Geocoder[ geocoderName_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074 ](\n",
+       "                geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&#x27;providerOptions&#x27;]\n",
+       "            );\n",
+       "            geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&quot;geocoder&quot;] = customGeocoder_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074;\n",
+       "\n",
        "            L.Control.geocoder(\n",
-       "                {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;}\n",
+       "                geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074\n",
        "            ).on(&#x27;markgeocode&#x27;, function(e) {\n",
-       "                map_9a7ccf446d8282d806f033bb132bd217.setView(e.geocode.center, 11);\n",
-       "            }).addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
+       "                var zoom = geocoderOpts_geocoder_4e5f1d21aaeb56d8140d7bb0daccf074[&#x27;zoom&#x27;] || map_86dbfc44c74439aa6b62ef905b764519.getZoom();\n",
+       "                map_86dbfc44c74439aa6b62ef905b764519.setView(e.geocode.center, zoom);\n",
+       "            }).addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "\n",
        "        \n",
        "    \n",
-       "            map_9a7ccf446d8282d806f033bb132bd217.fitBounds(\n",
+       "            map_86dbfc44c74439aa6b62ef905b764519.fitBounds(\n",
        "                [[27.856693999999997, 67.92256], [27.856693999999997, 67.92256]],\n",
        "                {&quot;maxZoom&quot;: 8}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            var tile_layer_59207b85d6d60dee4ec6469bc5df2f87 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/global-water-watch/maps/c41e4949b81680ccdd5976799ba9cec2-82cf13073b502f6653d6e909d8885e9b/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            var tile_layer_bbc52e7c313640615d88354901052b9d = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/maps/58b09ab5ac7957b8422dc6b1f0b19955-67d6710860b55aef05fe970ef76bbd96/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "                tile_layer_59207b85d6d60dee4ec6469bc5df2f87.addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
+       "            tile_layer_bbc52e7c313640615d88354901052b9d.addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
+       "        \n",
        "    \n",
-       "            var tile_layer_864bc2f4d12373a951deafe2bea171ae = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/global-water-watch/maps/967bdbfd57d5ae3e7e543c4f4131d4b7-4e95636ed8f878bb2a51232deff9cddb/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            var tile_layer_ce64e21e6fdb6a5c440c95701e1b4c3e = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/maps/27a42caec9cb3aa1841f623d0eb2150f-55b49fb2c5fb346a20fbda36c8e9d774/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "                tile_layer_864bc2f4d12373a951deafe2bea171ae.addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
-       "    \n",
-       "            var tile_layer_b51017e3494ed9033c09b109b9af316c = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/global-water-watch/maps/e53d25044bbd29e7c4c697df3493aa86-ab1c0d1ef217a68e13f9dc6ce17aaa4b/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            );\n",
+       "            tile_layer_ce64e21e6fdb6a5c440c95701e1b4c3e.addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "        \n",
        "    \n",
-       "                tile_layer_b51017e3494ed9033c09b109b9af316c.addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
-       "    \n",
-       "            var tile_layer_13f6377d3ad3aa26efb8a5a0c681b168 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/global-water-watch/maps/0dedab96040aec448262ef986943c6d5-dca4a130852ffce93756b4f4630de1db/tiles/{z}/{x}/{y}&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 24, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "                tile_layer_13f6377d3ad3aa26efb8a5a0c681b168.addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
-       "    \n",
-       "            var layer_control_b046fc80ff753d7a0d3728d30a9bddfa_layers = {\n",
+       "            var layer_control_6bc19a70c972e37ebc2d75fa14217275_layers = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_925092e70dbeda245d230807f1e0ebf7,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_30fb13d0c779a7f2e131f34940ae48ad,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;Landsat 8 2022-10-07 05:56:55.083&quot; : tile_layer_59207b85d6d60dee4ec6469bc5df2f87,\n",
-       "                    &quot;Landsat 8 2022-10-23 05:56:55.960&quot; : tile_layer_864bc2f4d12373a951deafe2bea171ae,\n",
-       "                    &quot;Landsat 8 2022-10-14 06:02:36.556&quot; : tile_layer_b51017e3494ed9033c09b109b9af316c,\n",
-       "                    &quot;Landsat 8 2022-10-14 06:03:00.451&quot; : tile_layer_13f6377d3ad3aa26efb8a5a0c681b168,\n",
+       "                    &quot;Sentinel-1 2022-10-05 01:25:51.000&quot; : tile_layer_bbc52e7c313640615d88354901052b9d,\n",
+       "                    &quot;Sentinel-1 2022-10-05 01:25:26.000&quot; : tile_layer_ce64e21e6fdb6a5c440c95701e1b4c3e,\n",
        "                },\n",
        "            };\n",
-       "            let layer_control_b046fc80ff753d7a0d3728d30a9bddfa = L.control.layers(\n",
-       "                layer_control_b046fc80ff753d7a0d3728d30a9bddfa_layers.base_layers,\n",
-       "                layer_control_b046fc80ff753d7a0d3728d30a9bddfa_layers.overlays,\n",
+       "            let layer_control_6bc19a70c972e37ebc2d75fa14217275 = L.control.layers(\n",
+       "                layer_control_6bc19a70c972e37ebc2d75fa14217275_layers.base_layers,\n",
+       "                layer_control_6bc19a70c972e37ebc2d75fa14217275_layers.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_9a7ccf446d8282d806f033bb132bd217);\n",
+       "            ).addTo(map_86dbfc44c74439aa6b62ef905b764519);\n",
        "\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" width=\"100%\" height=\"600\"style=\"border:none !important;\" \"allowfullscreen\" \"webkitallowfullscreen\" \"mozallowfullscreen\"></iframe>"
       ],
       "text/plain": [
-       "<geemap.foliumap.Map at 0x7efbd74a92d0>"
+       "<geemap.foliumap.Map at 0x7ff1a2cba8d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "floodmap.preview_data()"
+    "floodmap.view_data(datasets=[\"Sentinel-1\"], dates=[\"2022-10-05 01:25:51.000\", \"2022-10-05 01:25:26.000\"])"
    ]
   },
   {
