fixed bug with providers

--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -162,6 +162,7 @@
       "Dataset name: Sentinel-1\n",
       "Number of images: 5\n",
       "Dataset ID: COPERNICUS/S1_GRD\n",
+      "Providers: GFM ,Hydrafloods\n",
       "\n",
       "| Timestamp               |   Quality score (%) |\n",
       "|-------------------------+---------------------|\n",
@@ -175,11 +176,13 @@
       "Dataset name: Sentinel-2\n",
       "Number of images: 0\n",
       "Dataset ID: COPERNICUS/S2_SR_HARMONIZED\n",
+      "Providers: Hydrafloods\n",
       "\n",
       "======================================================================\n",
       "Dataset name: Landsat 7\n",
       "Number of images: 1\n",
       "Dataset ID: LANDSAT/LE07/C02/T1_L2\n",
+      "Providers: Hydrafloods\n",
       "\n",
       "| Timestamp               |   Quality score (%) |\n",
       "|-------------------------+---------------------|\n",
@@ -189,6 +192,7 @@
       "Dataset name: Landsat 8\n",
       "Number of images: 3\n",
       "Dataset ID: LANDSAT/LC08/C02/T1_L2\n",
+      "Providers: Hydrafloods\n",
       "\n",
       "| Timestamp               |   Quality score (%) |\n",
       "|-------------------------+---------------------|\n",
@@ -200,6 +204,7 @@
       "Dataset name: VIIRS\n",
       "Number of images: 14\n",
       "Dataset ID: NOAA/VIIRS/001/VNP09GA\n",
+      "Providers: Hydrafloods\n",
       "\n",
       "| Timestamp               |   Quality score (%) |\n",
       "|-------------------------+---------------------|\n",
@@ -222,6 +227,7 @@
       "Dataset name: MODIS\n",
       "Number of images: 10\n",
       "Dataset ID: MODIS/006/MOD09GA\n",
+      "Providers: Hydrafloods\n",
       "\n",
       "| Timestamp               |   Quality score (%) |\n",
       "|-------------------------+---------------------|\n",
