added available_data method to GFM

--- a/notebooks/GFM_example.ipynb
+++ b/notebooks/GFM_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +104,6 @@
      "output_type": "stream",
      "text": [
       "To authenticate to the GFM API please enter your email and your password in the following prompts\n",
-      "Incorrect email or password, please try again\n",
-      "To authenticate to the GFM API please enter your email and your password in the following prompts\n",
       "Successfully authenticated to the GFM API\n",
       "INFO:EO_Floods.providers.GFM.gfm:Uploading geometry to GFM server\n",
       "INFO:EO_Floods.providers.GFM.gfm:Successfully uploaded geometry to GFM server\n"
@@ -114,6 +112,58 @@
    ],
    "source": [
     "r = floodmap.generate_flood_extents(provider=\"GFM\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:EO_Floods.providers.GFM.gfm:Retrieving GFM product information\n",
+      "For the following dates there is GFM data:  ['2022-10-02T13:36:35', '2022-10-05T01:25:26', '2022-10-05T01:25:51', '2022-10-09T13:28:25', '2022-10-14T13:36:35']\n"
+     ]
+    }
+   ],
+   "source": [
+    "floodmap.provider.available_data()"
    ]
   },
   {
