add select_data method

--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import ee\n",
-    "ee.Initialize()\n",
-    "from EO_Floods.floodmap import FloodMap"
+    "from EO_Floods.floodmap import FloodMap\n",
+    "ee.Initialize()"
    ]
   },
   {
@@ -75,7 +75,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:EO_Floods.floodmap:Provider set as Hydrafloods\n",
       "INFO:EO_Floods.floodmap:Flood map object initialized\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
+      "\n",
+      "Attention required for NOAA/VIIRS/001/VNP09GA! You are using a deprecated asset.\n",
+      "To ensure continued functionality, please update it.\n",
+      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/NOAA_VIIRS_001_VNP09GA\n",
+      "\n",
+      "  warnings.warn(warning, category=DeprecationWarning)\n",
+      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
+      "\n",
+      "Attention required for MODIS/006/MOD09GA! You are using a deprecated asset.\n",
+      "To ensure continued functionality, please update it.\n",
+      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/MODIS_006_MOD09GA\n",
+      "\n",
+      "  warnings.warn(warning, category=DeprecationWarning)\n"
      ]
     }
    ],
@@ -84,6 +105,7 @@
     "floodmap = FloodMap(\n",
     "    start_date=\"2022-10-01\",\n",
     "    end_date=\"2022-10-15\",\n",
+    "    provider=\"Hydrafloods\",\n",
     "    geometry=[67.740187,27.712453,68.104933,28.000935],\n",
     ")\n"
    ]
@@ -135,29 +157,13 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
-      "\n",
-      "Attention required for NOAA/VIIRS/001/VNP09GA! You are using a deprecated asset.\n",
-      "To ensure continued functionality, please update it.\n",
-      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/NOAA_VIIRS_001_VNP09GA\n",
-      "\n",
-      "  warnings.warn(warning, category=DeprecationWarning)\n",
-      "/home/tjalling/miniconda3/envs/EO-Floods/lib/python3.11/site-packages/ee/deprecation.py:204: DeprecationWarning: \n",
-      "\n",
-      "Attention required for MODIS/006/MOD09GA! You are using a deprecated asset.\n",
-      "To ensure continued functionality, please update it.\n",
-      "Learn more: https://developers.google.com/earth-engine/datasets/catalog/MODIS_006_MOD09GA\n",
-      "\n",
-      "  warnings.warn(warning, category=DeprecationWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:googleapiclient.http:Sleeping 1.89 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 3.45 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 0.96 seconds before retry 1 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
+      "WARNING:googleapiclient.http:Sleeping 1.83 seconds before retry 2 of 5 for request: POST https://earthengine.googleapis.com/v1/projects/ee-tjallingdejong-em/value:compute?prettyPrint=false&alt=json, after 429\n",
       "======================================================================\n",
       "Dataset name: Sentinel-1\n",
       "Number of images: 5\n",
